--- a/Unit01_Crash Course on Python.ipynb
+++ b/Unit01_Crash Course on Python.ipynb
@@ -35,19 +35,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入一個數字，介於1~1000:10\n",
+      "<class 'int'>\n",
+      "偶數\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input(\"請輸入一個數字，介於1~1000:\")\n",
+    "a = int(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "if 1<=a<=1000:\n",
+    "    if a%2 == 0:\n",
+    "        print(\"偶數\")\n",
+    "    else:\n",
+    "        print(\"奇數\")\n",
+    "else:\n",
+    "    print(\"數字超出範圍\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 02 - 填字遊戲（Mad libs game）\n",
+    "# 02 - 填字遊戲（Mad libs game）\n",
     "#### 使用者輸入任何字，它可以是名詞、形容詞、動詞、代名詞等。程式得到文字後，可自行排列，組成成一個模板故事。\n",
     "\n",
-    "> 題目：輸入一數字判斷奇數或偶數<br>\n",
+    "> 題目：輸入一連串對應要求的文字<br>\n",
     "輸入(Input): 一連串依據說明輸入對應文字 <br>\n",
     "輸出(Output): 模板故事\n",
     "\n",
@@ -56,32 +78,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請問需要建造幾次模板故事：1\n",
-      "請輸入課程期數: 342\n",
-      "請輸入課程名稱: python機器學習\n",
-      "請輸入姓名: 江尚瑀\n",
-      "請輸入您的背景(科系或職業): 資工訓練班學生\n",
-      "請簡述對於本課程得期望(列出幾點修完課程想得到的技能/對自己未來的規劃): 機器學習\n",
-      "------------------------------------------\n",
-      "第342期 - python機器學習 \n",
-      "姓名： 江尚瑀 ,\n",
-      "學生背景： 資工訓練班學生\n",
-      "==========================================\n",
-      "江尚瑀 修習完課程[ python機器學習 ]後，\n",
-      "結業成果獲得: 機器學習 。\n",
-      "Well Done.\n",
-      "------------------------------------------\n"
+      "請輸入執行次數:2\n",
+      "請輸入課程期數:374\n",
+      "請輸入課程名稱:python 機器學習入門\n",
+      "請輸入姓名:楊佳倫\n",
+      "請輸入您的背景(科系或職業):財金\n",
+      "請簡述未來規劃: 學會寫財金程式\n",
+      "---------------------------\n",
+      "第374期- python 機器學習入門\n",
+      "姓名: 楊佳倫 ,\n",
+      "學生背景: 財金\n",
+      "==========結訓證明========\n",
+      "恭喜 楊佳倫 修習完課程[ python 機器學習入門 ]後，\n",
+      "結業成果獲得: 學會寫財金程式 。\n",
+      "well done.\n",
+      "---------------------------\n",
+      "請輸入課程期數:374\n",
+      "請輸入課程名稱:林辰遙\n",
+      "請輸入姓名:林辰遙\n",
+      "請輸入您的背景(科系或職業):商業\n",
+      "請簡述未來規劃: run business\n",
+      "---------------------------\n",
+      "第374期- 林辰遙\n",
+      "姓名: 林辰遙 ,\n",
+      "學生背景: 商業\n",
+      "==========結訓證明========\n",
+      "恭喜 林辰遙 修習完課程[ 林辰遙 ]後，\n",
+      "結業成果獲得: run business 。\n",
+      "well done.\n",
+      "---------------------------\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "n = int(input(\"請輸入執行次數:\"))\n",
+    "\n",
+    "for i in range(n):\n",
+    "        \n",
+    "    semester = input(\"請輸入課程期數:\")\n",
+    "    course = input(\"請輸入課程名稱:\")\n",
+    "    name = input(\"請輸入姓名:\")\n",
+    "    background = input(\"請輸入您的背景(科系或職業):\")\n",
+    "    expectation = input(\"請簡述未來規劃: \")\n",
+    "\n",
+    "    print(\"---------------------------\")\n",
+    "    print(\"第%s期- %s\" %(semester,course))\n",
+    "    print(\"姓名:\",name,\",\")\n",
+    "    print(\"學生背景:\" ,background)\n",
+    "    print(\"==========結訓證明========\")\n",
+    "    print(\"恭喜\",name,\"修習完課程[\",course, ']後，')\n",
+    "    print(\"結業成果獲得:\",expectation, \"。\")\n",
+    "    print(\"well done.\")\n",
+    "    print(\"---------------------------\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,10 +153,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入 0 < ? < 100 範圍的數字:80\n",
+      "再小一點!! 您猜了1次\n",
+      "請輸入 0 < ? < 80 範圍的數字:90\n",
+      "out of range\n",
+      "請輸入 0 < ? < 80 範圍的數字:70\n",
+      "再小一點!! 您猜了2次\n",
+      "請輸入 0 < ? < 70 範圍的數字:65\n",
+      "再小一點!! 您猜了3次\n",
+      "請輸入 0 < ? < 65 範圍的數字:33\n",
+      "再大一點!!您猜了4次\n",
+      "請輸入 33 < ? < 65 範圍的數字:55\n",
+      "再小一點!! 您猜了5次\n",
+      "請輸入 33 < ? < 55 範圍的數字:44\n",
+      "再小一點!! 您猜了6次\n",
+      "請輸入 33 < ? < 44 範圍的數字:22\n",
+      "out of range\n",
+      "請輸入 33 < ? < 44 範圍的數字:43\n",
+      "再小一點!! 您猜了7次\n",
+      "請輸入 33 < ? < 43 範圍的數字:42\n",
+      "賓果! 猜對了，答案是 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "Max = 100\n",
+    "Min = 0\n",
+    "ans=random.randint(1,99)\n",
+    "count=0\n",
+    "\n",
+    "while True:\n",
+    "    print(\"請輸入\",Min,\"< ? <\",Max, \"範圍的數字:\", end=\"\")\n",
+    "    guess= int(input())\n",
+    "    \n",
+    "    if guess>Min and guess < Max:\n",
+    "   \n",
+    "        count+=1\n",
+    "        if guess==ans:\n",
+    "            print(\"賓果! 猜對了，答案是\", ans,)\n",
+    "            break\n",
+    "        elif guess>ans:\n",
+    "            Max=guess\n",
+    "            print(\"再小一點!! 您猜了%d次\"%(count))\n",
+    "\n",
+    "        else:\n",
+    "            Min=guess\n",
+    "            print(\"再大一點!!您猜了%d次\"%(count))\n",
+    "     \n",
+    "    else: \n",
+    "        print(\"out of range\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,17 +232,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "討厭\n",
-      "你用了 2 個文字述說內心的想法\n",
-      "天\n",
-      "9\n"
+      "要\n",
+      "你用了 1 個文字述說內心的想法\n",
+      "------------------------------------------\n",
+      "要\n",
+      "0\n",
+      "------------------------------------------\n",
+      "文章總字數: 840\n",
+      "不 14\n"
      ]
     }
    ],
@@ -265,23 +380,33 @@
     "#請使用者輸入一文字\n",
     "#計算該文字在文章出現次數\n",
     "#列印出現次數\n",
+    "string=input()\n",
+    "s_num = s.count(string)\n",
+    "print(s_num)\n",
     "\n",
     "print (\"------------------------------------------\")\n",
     "#把文字中 '。，\\n；：？「」'的標點符號去除\n",
-    "\n",
+    "for i in '。，\\n；：？「」':\n",
+    "    s=s.replace(i,\"\")\n",
+    "    \n",
     "#目前已知出現最多次的字的次數\n",
+    "maxchar=\"\"\n",
+    "maxct=0\n",
     "#目前已知出現最多次的字\n",
     " \n",
     "print('文章總字數:',len(s))\n",
     "\n",
     "for astr in s:\n",
-    "    #print(astr)\n",
+    "    \n",
     "    act=s.count(astr)\n",
     "    # 如果 現在這個字出現的次數(act) 大於 目前已知出現最多次字的次數\n",
     "        #就讓 現在這個字出現的次數 成為 目前已知出現最多次的字的次數\n",
     "        #還要記錄 現在這個字(astr) 到 目前已知出現最多次的字\n",
+    "    if act>maxct:\n",
+    "        maxct=act\n",
+    "        maxchar=astr\n",
     "else:\n",
-    "    print(maxchar)"
+    "    print(maxchar, maxct)"
    ]
   },
   {
@@ -306,28 +431,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your email address?: aaa@ntut.org.tw\n",
-      "Your username is 'aaa' and your domain name is 'ntut.org.tw'\n",
-      "這是在 ntut 之下自定義域\n"
+      "What is your email address?: vidi3688@gmail.com\n",
+      "Your username is 'vidi3688' and your domain name is 'gmail.com'\n",
+      "這是註冊在 Google 之下的 Email 地址'\n"
      ]
     }
    ],
    "source": [
     "# Get user email address\n",
     "email = input(\"What is your email address?: \").strip()\n",
+    "#.strip 用來移除字串前後有的空格\n",
     "\n",
     "# Slice out the user name\n",
-    "\n",
+    "user_name=email[0:email.index(\"@\")]\n",
     "\n",
     "# Slice the domain name\n",
-    "\n",
+    "domain_name=email[email.index(\"@\")+1:len(email)]\n",
     "\n",
     "# Format message\n",
     "output = \"Your username is '{}' and your domain name is '{}'\".format(user_name,domain_name)\n",
@@ -337,11 +463,11 @@
     "\n",
     "\n",
     "domain = {'gmail.com':'Google','yahoo.com.tw':'Yahoo','ntu.edu.tw':'臺大','hotmail.com.tw':'Hotmail','hotmail.com':'Hotmail'}\n",
-    "if ??????:\n",
-    "    output = \"這是註冊在 {} 之下的 Email 地址'\".format(??????)\n",
+    "if domain_name in domain:\n",
+    "    output = \"這是註冊在 {} 之下的 Email 地址'\".format(domain[domain_name])\n",
     "else:\n",
     "    \n",
-    "    output = \"這是在 {} 之下自定義域\".format(??????)\n",
+    "    output = \"這是在 {} 之下自定義域\".format(domain[domain_name])\n",
     "print(output)"
    ]
   },
@@ -367,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +502,8 @@
      "text": [
       "['光彦', '美環']\n",
       "['丸尾', '野口']\n",
-      "['柯南', '步美', '灰原']\n"
+      "['柯南', '步美', '灰原']\n",
+      "['丸尾', '光彦', '柯南', '步美', '灰原', '美環', '野口']\n"
      ]
     }
    ],
@@ -387,14 +514,22 @@
     "b=m.difference(a)\n",
     "c=e.difference(a)\n",
     "a1=list(a)\n",
+    "\n",
     "b1=list(b)\n",
-    "c1=list(c)\n",
     "b1.sort()\n",
     "print(b1)\n",
+    "\n",
+    "c1=list(c)\n",
     "c1.sort()\n",
     "print(c1)\n",
+    "\n",
     "a1.sort()\n",
-    "print(a1)\n"
+    "print(a1)\n",
+    "\n",
+    "full=m.union(e)\n",
+    "d1=list(full)\n",
+    "d1.sort()\n",
+    "print(d1)"
    ]
   },
   {
@@ -425,14 +560,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D:\\code\\ML_202105\\testfile\n",
+      "testfile\n",
       "I'm a directory: file1\n",
       "I'm a directory: file2\n",
       "I'm a File: hw_07945001.txt\n",
@@ -443,7 +578,8 @@
       "I'm a File: hw_07945005.txt\n",
       "I'm a File: hw_07945007.txt\n",
       "I'm a File: hw_07945008.txt\n",
-      "I'm a File: hw_07945009.txt\n"
+      "I'm a File: hw_07945009.txt\n",
+      "['07945001', '079450010', '07945002', '07945003', '07945004', '07945005', '07945007', '07945008', '07945009']\n"
      ]
     }
    ],
@@ -454,6 +590,8 @@
     "yourPath = input()\n",
     "# 列出指定路徑底下所有檔案(包含資料夾)\n",
     "allFileList = os.listdir(yourPath)\n",
+    "ID=[]\n",
+    "\n",
     "\n",
     "# 逐一查詢檔案清單\n",
     "for file in allFileList:\n",
@@ -464,7 +602,11 @@
     "        print(\"I'm a directory: \" + file)\n",
     "    #   使用isfile判斷是否為檔案\n",
     "    elif os.path.isfile(os.path.join(yourPath,file)):\n",
-    "        print(\"I'm a File: \" + file)\n"
+    "        print(\"I'm a File: \" + file)\n",
+    "        ID.append(file[file.index(\"_\")+1:file.index(\".\")])\n",
+    "print(ID)      \n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -490,19 +632,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "['f1', 'f2']\n",
+      "5\n",
+      "['f1', 'f2', 'f3', 'f4', 'f5']\n",
       "Enter\n",
-      "['f2', 'folder1']\n",
+      "['f2', 'f3', 'f4', 'f5', 'folder1']\n",
       "Enter\n",
-      "['f2']\n",
+      "['f2', 'f3', 'f4', 'f5']\n",
       "Enter\n"
      ]
     }
@@ -516,7 +658,24 @@
     "os.mkdir('files')\n",
     "\n",
     "n = int(input())\n",
-    "\n"
+    "\n",
+    "os.chdir(\"files\")\n",
+    "for i in range (1,n+1):\n",
+    "    os.mkdir(\"f\"+str(i))\n",
+    "print(sorted(os.listdir()))\n",
+    "\n",
+    "a=input(\"Enter\") #在這裡停頓\n",
+    "\n",
+    "os.rename(\"f1\",\"folder1\")\n",
+    "print(sorted(os.listdir()))\n",
+    "a=input(\"Enter\")\n",
+    "\n",
+    "os.rmdir(\"folder1\")\n",
+    "print(sorted(os.listdir()))\n",
+    "a=input(\"Enter\")\n",
+    "\n",
+    "os.chdir(\"../\")\n",
+    "shutil.rmtree(\"files\")"
    ]
   },
   {
@@ -535,7 +694,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 5, 4, 3, 2, 1]\n",
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1,2,3,4,5,6]\n",
+    "\n",
+    "print(l[::-1])\n",
+    "print(l[3::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -546,8 +726,8 @@
       "Palindrome checker\n",
       "\n",
       "Please enter a word, phrase, or a sentence \n",
-      "to check if it is a palindrome: 雨 滋 春 樹 碧 連 天  天 連 碧 樹 春 滋 雨\n",
-      "The text you have entered is a palindrome!\n"
+      "to check if it is a palindrome: 資工訓練班\n",
+      "The text you have entered is not a palindrome.\n"
      ]
     }
    ],
@@ -555,22 +735,33 @@
     "def convertInputString():\n",
     "    #請使用者輸入一串字串，先轉換字串為統一小寫\n",
     "    rawInput = input(\"\\nPlease enter a word, phrase, or a sentence \\nto check if it is a palindrome: \") \n",
-    "    return ???\n",
+    "    rawString = rawInput.lower()\n",
+    "    rawList = list(rawString)\n",
+    "    return rawList\n",
     "\n",
     "def stripAnalphabetics(dirtyList): \n",
     "    analphabeticList = [\" \", \"-\", \".\", \",\", \":\", \";\", \"!\", \"?\", \"'\", \"\\\"\"] \n",
     "    #去除相關標點符號\n",
-    "    return ???\n",
+    "    for character in analphabeticList :\n",
+    "        if  character in dirtyList:\n",
+    "            dirtyList.remove (character)\n",
+    "            return stripAnalphabetics(dirtyList)#另外一個方法: replace是String才能使用\n",
+    "    return (dirtyList)\n",
     "\n",
     "def runPalindromeCheck(straightList):\n",
-    "    reversedList = straightList[::-1] \n",
-    "    if ????: \n",
+    "    reversedList = straightList[::-1] #把字顛倒過來\n",
+    "    if reversedList== straightList:\n",
     "        return \"The text you have entered is a palindrome!\" \n",
     "    else: \n",
     "        return \"The text you have entered is not a palindrome.\" \n",
     "\n",
     "def main(): \n",
     "    print(\"\\nPalindrome checker\") \n",
+    "    originalList =  convertInputString()\n",
+    "    originalList = stripAnalphabetics (originalList) #移除標點符號\n",
+    "    PalindromeCheck =runPalindromeCheck (originalList)\n",
+    "    print(PalindromeCheck)\n",
+    "    \n",
     "\n",
     "\n",
     "main() "
@@ -647,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -685,60 +876,65 @@
       "涂珮瑜 134\n",
       "夏明哲 111\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\nline=\\'\\'\\nfout = open(\"Score.csv\",\"r\")\\nfor i in (len(name)):\\n    print()\\n'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fin_E = open(??????,\"r\",encoding='UTF-8')\n",
-    "fin_M = open(??????,\"r\",encoding='UTF-8')\n",
+    "fin_E = open(\"data/english_list.csv\",\"r\",encoding='UTF-8')\n",
+    "fin_M = open(\"data/math_list.csv\",\"r\",encoding='UTF-8')\n",
     "lisE=[]\n",
     "lisM=[]\n",
     "name=[]\n",
     "for line in fin_E.readlines():\n",
+    "    #print(line,end=\"\")\n",
     "    line = line.strip().split(\",\")\n",
-    "    ???\n",
-    "    ???\n",
-    "    \n",
+    "    #print(line)\n",
+    "    name.append(line[0])\n",
+    "    lisE.append(line[1])\n",
+    "     \n",
     "for line in fin_M.readlines():\n",
     "    line = line.strip().split(\",\")\n",
-    "    ???\n",
+    "    lisM.append(line[1])\n",
     "    \n",
     "score=[]\n",
-    "fout = open(\"Score.csv\",\"w\")\n",
+    "fout = open(\"data/Score.csv\",\"w\")\n",
     "line=''\n",
-    "for i in range(???,???):\n",
+    "for i in range(1,len(lisE)):\n",
     "    score.append(int(lisE[i])+int(lisM[i]))\n",
     "    list1 = [name[i],str(score[i-1]),\"\\n\"]\n",
     "    print(name[i],str(score[i-1]))\n",
     "    \n",
     "    line = \",\".join(list1)\n",
-    "    fout.write(line)\n",
+    "    fout.write(line) #f-out (打開寫入)\n",
     "fin_E.close()\n",
     "fin_M.close()\n",
     "fout.close()\n",
-    "'''\n",
-    "line=''\n",
-    "fout = open(\"Score.csv\",\"r\")\n",
-    "for i in (len(name)):\n",
-    "    print()\n",
-    "'''\n"
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3']\n",
+      "1-2-3\n"
+     ]
+    }
+   ],
+   "source": [
+    "s=\"1,2,3\"\n",
+    "s=s.split(\",\") #String才有\n",
+    "print(s) #變成list\n",
+    "\n",
+    "#變回字串\n",
+    "s=\"-\".join(s)\n",
+    "print(s)"
+   ]
   }
  ],
  "metadata": {
